--- a/package.json
+++ b/package.json
@@ -1,36 +1,11 @@
 {
-  "name": "react-crash",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "json-server --watch src/jobs.json --port 8000"
-  },
+  "name": "json-server",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0",
-    "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5"
+    "json-server": "^0.16.3"
   },
-  "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "json-server": "^1.0.0-beta.1",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+  "scripts": {
+    "start": "node server.js"
   }
 }
